--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,35 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 body {
     background-color: #1e1e1e;
     color: #d4d4d4;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+}
+nav {
+    width: 100%;
+    height: 65px;
+    background-color: #252525;
+}
+ul {
+
+}
+ul li {
+    list-style: none;
+    display: inline-block;
+    float: left;
+    line-height: 65px;
+}
+ul li a {
+    display: block;
+    text-decoration: none;
+    font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    color: #d4d4d4;
+    padding: 0 20px;
+}
+ul li a:hover {
+    background-color: #303030;
+    color: #fff;
 }
