--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 body {
     background-color: #1e1e1e;
     color: #d4d4d4;
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-family: 'Lexend Deca', sans-serif;
 }
 nav {
     width: 100%;
