--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,13 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body {
     background-color: #1e1e1e;
     color: #d4d4d4;
     font-family: 'Lexend Deca', sans-serif;
+    width: 100%;
 }
 nav {
     width: 100%;
@@ -32,3 +34,70 @@ ul li a:hover {
     background-color: #303030;
     color: #fff;
 }
+/*animované logo*/
+#logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+#logo path:nth-child(1) {
+    stroke-dasharray: 30px;
+    stroke-dashoffset: 50px;
+}
+#logo path:nth-child(2) {
+
+}
+#logo path:nth-child(3) {
+
+}
+#logo path:nth-child(4) {
+
+}
+#logo path:nth-child(5) {
+
+}
+#logo path:nth-child(6) {
+
+}
+#logo path:nth-child(7) {
+
+}
+#logo path:nth-child(8) {
+
+}
+#logo path:nth-child(9) {
+
+}
+#logo path:nth-child(10) {
+
+}
+#logo path:nth-child(11) {
+
+}
+#logo path:nth-child(12) {
+
+}
+#logo path:nth-child(13) {
+
+}
+#logo path:nth-child(14) {
+
+}
+#logo path:nth-child(15) {
+
+}
+#logo path:nth-child(16) {
+
+}
+#logo path:nth-child(17) {
+
+}
+#logo path:nth-child(18) {
+
+}
+#logo path:nth-child(19) {
+
+}
+/*konec animovaného loga*/
+/*Zde jsou .classy nebo #selectory které jsou použity pouze jednou*/
