--- a/styles.css
+++ b/styles.css
@@ -40,64 +40,115 @@ ul li a:hover {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    animation: fill 2s ease forwards 5s;
 }
 #logo path:nth-child(1) {
-    stroke-dasharray: 30px;
-    stroke-dashoffset: 50px;
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards;
 }
 #logo path:nth-child(2) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 0.3s;
 }
 #logo path:nth-child(3) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 0.6s;
 }
 #logo path:nth-child(4) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 0.9s;
 }
 #logo path:nth-child(5) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 1.2s;
 }
 #logo path:nth-child(6) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 1.5s;
 }
 #logo path:nth-child(7) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 1.8s;
 }
 #logo path:nth-child(8) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 2.1s;
 }
 #logo path:nth-child(9) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 2.4s;
 }
 #logo path:nth-child(10) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 2.7s;
 }
 #logo path:nth-child(11) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 3.0s;
 }
 #logo path:nth-child(12) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 3.3s;
 }
 #logo path:nth-child(13) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 3.6s;
 }
 #logo path:nth-child(14) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 3.9s;
 }
 #logo path:nth-child(15) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 4.2s;
 }
 #logo path:nth-child(16) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 4.5s;
 }
 #logo path:nth-child(17) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 4.8s;
 }
 #logo path:nth-child(18) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 5.1s;
 }
 #logo path:nth-child(19) {
-
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 5.4s;
+}
+@keyframes line-anim{
+    to{
+        stroke-dashoffset: 0;
+    }
+}
+@keyframes fill{
+    from{
+        fill: transparent;
+    }
+    to{
+        fill: #fff;
+    }
 }
 /*konec animovaného loga*/
 /*Zde jsou .classy nebo #selectory které jsou použity pouze jednou*/
