--- a/styles.css
+++ b/styles.css
@@ -34,13 +34,20 @@ ul li a:hover {
     background-color: #303030;
     color: #fff;
 }
+.actualcontent {
+    position: absolute;
+    top: 100%;
+    left: 10%;
+    right: 10%;
+    text-align: center;
+}
 /*animované logo*/
 #logo {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    animation: fill 2s ease forwards 5s;
+    animation: fill 2s ease forwards 1.8s;
 }
 #logo path:nth-child(1) {
     stroke-dasharray: 500px;
@@ -50,92 +57,92 @@ ul li a:hover {
 #logo path:nth-child(2) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 0.3s;
+    animation: line-anim 2s ease forwards 0.1s;
 }
 #logo path:nth-child(3) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 0.6s;
+    animation: line-anim 2s ease forwards 0.2s;
 }
 #logo path:nth-child(4) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 0.9s;
+    animation: line-anim 2s ease forwards 0.3s;
 }
 #logo path:nth-child(5) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 1.2s;
+    animation: line-anim 2s ease forwards 0.4s;
 }
 #logo path:nth-child(6) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 1.5s;
+    animation: line-anim 2s ease forwards 0.5s;
 }
 #logo path:nth-child(7) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 1.8s;
+    animation: line-anim 2s ease forwards 0.6s;
 }
 #logo path:nth-child(8) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 2.1s;
+    animation: line-anim 2s ease forwards 0.7s;
 }
 #logo path:nth-child(9) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 2.4s;
+    animation: line-anim 2s ease forwards 0.8s;
 }
 #logo path:nth-child(10) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 2.7s;
+    animation: line-anim 2s ease forwards 0.9s;
 }
 #logo path:nth-child(11) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 3.0s;
+    animation: line-anim 2s ease forwards 1.0s;
 }
 #logo path:nth-child(12) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 3.3s;
+    animation: line-anim 2s ease forwards 1.1s;
 }
 #logo path:nth-child(13) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 3.6s;
+    animation: line-anim 2s ease forwards 1.2s;
 }
 #logo path:nth-child(14) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 3.9s;
+    animation: line-anim 2s ease forwards 1.3s;
 }
 #logo path:nth-child(15) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 4.2s;
+    animation: line-anim 2s ease forwards 1.4s;
 }
 #logo path:nth-child(16) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 4.5s;
+    animation: line-anim 2s ease forwards 1.5s;
 }
 #logo path:nth-child(17) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 4.8s;
+    animation: line-anim 2s ease forwards 1.6s;
 }
 #logo path:nth-child(18) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 5.1s;
+    animation: line-anim 2s ease forwards 1.7s;
 }
 #logo path:nth-child(19) {
     stroke-dasharray: 500px;
     stroke-dashoffset: 500px;
-    animation: line-anim 2s ease forwards 5.4s;
+    animation: line-anim 2s ease forwards 1.8s;
 }
 @keyframes line-anim{
     to{
@@ -151,4 +158,16 @@ ul li a:hover {
     }
 }
 /*konec animovaného loga*/
+/*animovaná šipka*/
+#downarrow {
+    position: absolute;
+    top: 95%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    stroke-dasharray: 50px;
+    stroke-dashoffset: 50px;
+    animation: line-anim 1s ease forwards 2s;
+    animation: fill 1s ease forwards 3s;
+}
+/*konec animované šipky*/
 /*Zde jsou .classy nebo #selectory které jsou použity pouze jednou*/
