--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 nav {
     width: 100%;
     height: 65px;
-    background-color: #252525;
+    background-color: rgba(37, 37, 37, 0.5);
 }
 ul {
     margin-left: 65px;
