--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,14 @@ body {
     font-family: 'Lexend Deca', sans-serif;
     width: 100%;
 }
+.actualcontent {
+    position: absolute;
+    top: 100%;
+    left: 10%;
+    right: 10%;
+    text-align: center;
+}
+/*navigace*/
 nav {
     width: 100%;
     height: 65px;
@@ -34,13 +42,7 @@ ul li a:hover {
     background-color: #303030;
     color: #fff;
 }
-.actualcontent {
-    position: absolute;
-    top: 100%;
-    left: 10%;
-    right: 10%;
-    text-align: center;
-}
+/*navigace konec*/
 /*animované logo*/
 #logo {
     position: absolute;
