--- a/styles.css
+++ b/styles.css
@@ -37,10 +37,11 @@ ul li a {
     font-size: 16px;
     color: #d4d4d4;
     padding: 0 20px;
+    transition: background-color .2s ease-in-out;
 }
 ul li a:hover {
     background-color: #303030;
-    color: #fff;
+    color: #ffffff;
 }
 /*navigace konec*/
 /*animované logo*/
