--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,11 @@ ul li a:hover {
     stroke-dashoffset: 500px;
     animation: line-anim 2s ease forwards 1.8s;
 }
+#logo path:nth-child(20) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 1.9s;
+}
 @keyframes line-anim{
     to {
         stroke-dashoffset: 0;
