--- a/styles.css
+++ b/styles.css
@@ -166,6 +166,55 @@ ul li a:hover {
     }
 }
 /*konec animovaného loga*/
+/*logo but shojter*/
+#logoshort {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    animation: fill 2s ease forwards 1s;
+}
+#logoshort path:nth-child(1) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 0.0s;
+}
+#logoshort path:nth-child(2) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 0.3s;
+}
+#logoshort path:nth-child(3) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 0.6s;
+}
+#logoshort path:nth-child(4) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 0.9s;
+}
+#logoshort path:nth-child(5) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 1.2s;
+}
+#logoshort path:nth-child(6) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 1.5s;
+}
+#logoshort path:nth-child(7) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 1.8s;
+}
+#logoshort path:nth-child(8) {
+    stroke-dasharray: 500px;
+    stroke-dashoffset: 500px;
+    animation: line-anim 2s ease forwards 2.1s;
+}
+/*end of logo but shojter*/
 /*animovaná šipka*/
 #downarrow {
     position: absolute;
