--- a/styles.css
+++ b/styles.css
@@ -310,6 +310,18 @@ ul li a:hover {
     opacity: 100%;
 }
 /*konec animované šipky*/
+/*Footer*/
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    opacity: 50%;
+    background-color: #252525;
+    color: white;
+    text-align: center;
+  }
+/*End of footer*/
 /*Zde jsou .classy nebo #selectory které jsou použity pouze jednou*/
 #cornerlogo {
     position: absolute;
