--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@ body {
 }
 /*navigace*/
 nav {
+    position: absolute;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 65px;
     background-color: rgba(37, 37, 37, 0.5);
