--- a/styles.css
+++ b/styles.css
@@ -313,6 +313,32 @@ ul li a:hover {
     opacity: 100%;
 }
 /*konec animované šipky*/
+/*at barvy*/
+.atadmin {
+    color: #ff5555
+}
+.atadmin h1 {
+    font-size: 20px;
+}
+.atadmin h2:nth-child(1) {
+    position: absolute;
+    left: 10%;
+    width: 20%;
+    right: 70%;
+}
+.atadmin h2:nth-child(2) {
+    position: absolute;
+    left: 40%;
+    width: 20%;
+    right: 40%;
+}
+.atadmin h2:nth-child(3) {
+    position: absolute;
+    left: 70%;
+    width: 20%;
+    right: 10%;
+}
+/*konec at barvy*/
 /*Footer*/
 
 /*End of footer*/
