--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,33 @@ body {
     right: 10%;
     text-align: center;
 }
+#cornerlogo {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+table {
+    margin-left: 50%;
+    transform: translate(-50%);
+}
+th {
+    text-align: center;
+}
+.e1 {
+    color: #1e1e1e;
+}
+#admintable {
+    color: #F55;
+}
+#modtable {
+    color: #5F5;
+}
+#jrmodtable {
+    color: #5FF;
+}
+#helpertable {
+    color: #55F;
+}
 /*navigace*/
 nav {
     position: absolute;
@@ -64,17 +91,3 @@ ul li a:hover {
     opacity: 100%;
 }
 /*konec animované šipky*/
-/*Zde jsou .classy nebo #selectory které jsou použity pouze jednou*/
-#cornerlogo {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-}
-table {
-    margin-left: 50%;
-    transform: translate(-50%);
-}
-th {
-    padding: 5%;
-    text-align: center;
-}
