--- a/universal.css
+++ b/universal.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    content-visibility: auto;
 }
 body {
     background-color: #1e1e1e;
